logs/seis-suite.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ambient'...
Listing './lib/python3.5/site-packages/ambient/ant'...
Compiling './lib/python3.5/site-packages/ambient/ant/preprocess.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/preprocess.py", line 20
    t0 = dt.datetime(2014, 10, 01, 00, 00)
                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/ambient/ant/psconfig.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psconfig.py", line 34
    print "Select a configuration file:"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/pscrosscorr.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/pscrosscorr.py", line 1081
    print "Warning: could not calculate instantenous frequencies in raw FTAN!"
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/psdepthmodel.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psdepthmodel.py", line 210
    print 'Preparing model and periods files'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/psmcsampling.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psmcsampling.py", line 91
    print s.format(self, other)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/ant/pspreprocess.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/pspreprocess.py", line 142
    print s.format(trace.stats.network, trace.stats.station),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/ant/psstation.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psstation.py", line 297
    print "Scanning stations in dir: " + mseed_dir
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/psstationSQL.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psstationSQL.py", line 255
    print "Scanning stations in SQL database: \n", SQL_db
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/pstomo.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/pstomo.py", line 667
    print "Velocities selection criteria:"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/ant/psutils.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/psutils.py", line 135
    print s.format(loc=select_loc, locs=','.join(locs[1:])),
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/ant/stack.py'...
***   File "./lib/python3.5/site-packages/ambient/ant/stack.py", line 144
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ambient/azimuth'...
Compiling './lib/python3.5/site-packages/ambient/azimuth/NZ_density.py'...
***   File "./lib/python3.5/site-packages/ambient/azimuth/NZ_density.py", line 72
    print type(UNIQUE_SHAPE)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/azimuth/decluster.py'...
***   File "./lib/python3.5/site-packages/ambient/azimuth/decluster.py", line 85
    print type(UNIQUE_SHAPE)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/azimuth/extended_geodesic.py'...
***   File "./lib/python3.5/site-packages/ambient/azimuth/extended_geodesic.py", line 99
    print coord_combs
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ambient/database'...
Compiling './lib/python3.5/site-packages/ambient/database/create_database.py'...
***   File "./lib/python3.5/site-packages/ambient/database/create_database.py", line 20
    print "Caution, database code may run slow because cPickle failed to import"
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/database/response_database.py'...
***   File "./lib/python3.5/site-packages/ambient/database/response_database.py", line 234
    print self.window
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ambient/misc'...
Listing './lib/python3.5/site-packages/ambient/response'...
Compiling './lib/python3.5/site-packages/ambient/response/FDSN_resp.py'...
***   File "./lib/python3.5/site-packages/ambient/response/FDSN_resp.py", line 50
    print net
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/response/resp.py'...
***   File "./lib/python3.5/site-packages/ambient/response/resp.py", line 230
    print index_code,
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ambient/spacing'...
Listing './lib/python3.5/site-packages/ambient/spectrum'...
Compiling './lib/python3.5/site-packages/ambient/spectrum/S_spectrum.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/S_spectrum.py", line 149
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/Sfind_extrema.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/Sfind_extrema.py", line 214
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/extrema_pickle.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/extrema_pickle.py", line 213
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/find_extrema.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/find_extrema.py", line 212
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/find_maxima.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/find_maxima.py", line 256
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/heat_pickle.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/heat_pickle.py", line 525
    print lonmin, latmin, lonmax, latmax
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/heatinterpolate.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/heatinterpolate.py", line 71
    print xmin, xmax, ymin, ymax
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/network_spectrum.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/network_spectrum.py", line 149
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ambient/spectrum/station_month_spectrum.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/station_month_spectrum.py", line 127
    subtitle = '{} | {}'.format(stat_info, month_year); print subtitle
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ambient/spectrum/total_spectrum.py'...
***   File "./lib/python3.5/site-packages/ambient/spectrum/total_spectrum.py", line 129
    print "time taken to import one month mseed was: ", t1-t0
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ambient/trigger'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/seis_suite-0.1.22.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
